--- a/tex/Introduction.tex
+++ b/tex/Introduction.tex
@@ -5,21 +5,21 @@
 \section{Revue bibliographique}
 
 \begin{itemize}
-    \item Théorie linéaire de Rott : \cite{rott_damped_1969, rott_thermally_1973, rott_thermally_1975, rott_thermally_1976, zouzoulas_thermally_1976, rott_thermoacoustics_1980, muller_thermally_1983} 
+%    \item Théorie linéaire de Rott : \cite{rott_damped_1969, rott_thermally_1973, rott_thermally_1975, rott_thermally_1976, zouzoulas_thermally_1976, rott_thermoacoustics_1980, muller_thermally_1983} 
     \item $f_\nu$ et $f_\kappa$ : \cite{swift_thermoacoustics_2017,di_giulio_wire_2023}
     \item Tortuosité et matériaux poreux : \cite{johnson_theory_1987, drummond_laminar_1984}
-    \item Phase optimale : \cite{poignand_etude_2006}
+%    \item Phase optimale : \cite{poignand_etude_2006}
     \item Thermocouples dans noyau TA : \cite{duffourd_refrigerateur_2001, penelet_etude_2004}
     \item Bilan de chaleur dans coeur TA : \cite{penelet_etude_2004}
-    \item Mélange de gaz : \cite{belcher_working_1999}
+%    \item Mélange de gaz : \cite{belcher_working_1999}
     \item Géométrie coaxiale : \cite{poignand_analysis_2013, poignand_thermoacoustic_2011, tijani_study_2008, ramadan_design_2021}
-    \item Géométrie compacte : \cite{poignand_etude_2006}
+%    \item Géométrie compacte : \cite{poignand_etude_2006}
     \item Convection naturelle : \cite{ross_influence_2003, hireche_numerical_2019, pan_visualization_2012, bianchi_transferts_2004, babaei_investigation_2010, gardner_cascade_2003}
     \item Convection naturelle dans les poreux : \cite{shiina_critical_2010, kvernvold_nonlinear_1979, richard_critere_1981, horton_convection_1945}
-    \item Streaming : \cite{so_internal_2006, bailliet_acoustic_2001, ramadan_experimental_2018}
+%    \item Streaming : \cite{so_internal_2006, bailliet_acoustic_2001, ramadan_experimental_2018}
     \item Analogies électroac en TA : \cite{wakeland_use_2000, backhaus_thermoacoustic-stirling_2000, poignand_analysis_2013}
     \item Electroac générale : \cite{rossi_electroacoustique_1986, novak_measurement_2019}
-    \item Pertes latérales : \cite{penelet_etude_2004, guedra_etudes_2012}
+    \item Pertes latérales : \cite{guedra_etudes_2012}
     \item Non uniformité de température sur la section : \cite{penelet_etude_2004}
     \item Conduction dans les stack et meshgrids : \cite{hsu_effective_1996, li_effective_2006, g_correlations_2022}
 \end{itemize}
