Chap 2 + un peu permeabilité

--- a/bib/phd_bib.bib
+++ b/bib/phd_bib.bib
@@ -1,4 +1,34 @@
 
+@article{tan_new_2024,
+	title = {A new investigation on permeability of multilayer stacked screen wick},
+	volume = {158},
+	issn = {07351933},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0735193324006742},
+	doi = {10.1016/j.icheatmasstransfer.2024.107912},
+	pages = {107912},
+	journaltitle = {International Communications in Heat and Mass Transfer},
+	shortjournal = {International Communications in Heat and Mass Transfer},
+	author = {Tan, Si-Cong and Xu, Qing and Wang, Tao and Guo, Cong and Jiang, Yu-Yan and Kong, Hui},
+	urldate = {2025-02-27},
+	date = {2024-11},
+	langid = {english},
+}
+
+@book{allard_propagation_2009,
+	edition = {1},
+	title = {Propagation of Sound in Porous Media: Modelling Sound Absorbing Materials},
+	rights = {http://doi.wiley.com/10.1002/tdm\_license\_1.1},
+	isbn = {978-0-470-74661-5 978-0-470-74733-9},
+	url = {https://onlinelibrary.wiley.com/doi/book/10.1002/9780470747339},
+	shorttitle = {Propagation of Sound in Porous Media},
+	publisher = {Wiley},
+	author = {Allard, Jean F. and Atalla, Noureddine},
+	urldate = {2025-02-27},
+	date = {2009-10-23},
+	langid = {english},
+	doi = {10.1002/9780470747339},
+}
+
 @online{fontbonne_postprocessing_2025,
 author = {Fontbonne, Martin},
 title = {{\textsc{Tacot} post processing codes}},
