--- a/tex/Introduction.tex
+++ b/tex/Introduction.tex
@@ -6,7 +6,7 @@
 
 \begin{itemize}
 %    \item Théorie linéaire de Rott : \cite{rott_damped_1969, rott_thermally_1973, rott_thermally_1975, rott_thermally_1976, zouzoulas_thermally_1976, rott_thermoacoustics_1980, muller_thermally_1983} 
-    \item $f_\nu$ et $f_\kappa$ : \cite{swift_thermoacoustics_2017,di_giulio_wire_2023}
+%    \item $f_\nu$ et $f_\kappa$ : \cite{swift_thermoacoustics_2017,di_giulio_wire_2023}
     \item Tortuosité et matériaux poreux : \cite{johnson_theory_1987, drummond_laminar_1984}
 %    \item Phase optimale : \cite{poignand_etude_2006}
     \item Thermocouples dans noyau TA : \cite{duffourd_refrigerateur_2001, penelet_etude_2004}
@@ -242,6 +242,20 @@ Le flux de chaleur thermoacoustique est donné par Swift \cite{swift_thermoacous
 	Q_{TA} = \underbrace{\frac{1}{2} \RE\left[pu^* \left( 1 - \frac{f_\kappa - f_\nu^*}{(1 - \Prandtl)(1 - f_\nu^*)} \right) \right]}_{q_{TA}} + \underbrace{\frac{\rho_0 C_p }{\Phi S \omega } \frac{1}{2} \IM \left[ \frac{f_\kappa + \Prandtl f_\nu^*}{(1-\Prandtl)|1-f_\nu|^2} |u|^2\right]}_{k_{TA}} \deriv_x T
 	\label{eq:FluxTA_swift}
 \end{equation}
+
+\subsection{Fonction visco-thermiques}
+\cite{swift_thermoacoustics_2017, di_giulio_wire_2023}
+
+\subsubsection{Milieu tortueux}
+
+\cite{allard_propagation_2009}
+
+\begin{subequations}
+	\begin{align}
+		f_\nu &= \\
+		f_\kappa &= 
+	\end{align}
+\end{subequations}
 
 \section{\'Etat de l'art}
 \subsection{De la recherche fondamentale...}
